[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Graphics/onscreencontrols/kenney/lineLight/lineLight22.png" type="Texture" id=1]
[ext_resource path="res://Assets/Graphics/onscreencontrols/iconfinder/sword_icon.png" type="Texture" id=2]
[ext_resource path="res://Assets/Graphics/onscreencontrols/kenney/lineLight/lineLight23.png" type="Texture" id=3]
[ext_resource path="res://Assets/Graphics/onscreencontrols/kenney/lineLight/lineLight24.png" type="Texture" id=4]
[ext_resource path="res://Assets/Graphics/onscreencontrols/kenney/lineLight/lineLight12.png" type="Texture" id=5]
[ext_resource path="res://Scenes/MobileControls/mobile_controls.gd" type="Script" id=6]
[ext_resource path="res://Assets/Graphics/onscreencontrols/kenney/lineLight/lineLight14.png" type="Texture" id=7]

[node name="MobileControls" type="CanvasLayer"]
pause_mode = 2
layer = 20
script = ExtResource( 6 )
pause_icon = ExtResource( 5 )
play_icon = ExtResource( 7 )

[node name="Jump_TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( 776, 434 )
scale = Vector2( 0.75, 0.75 )
normal = ExtResource( 4 )
action = "jump"

[node name="Attack_TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( 852, 434 )
scale = Vector2( 0.75, 0.75 )
normal = ExtResource( 2 )
action = "attack"

[node name="Left_TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( 16, 434 )
scale = Vector2( 0.75, 0.75 )
normal = ExtResource( 1 )
passby_press = true
action = "move_left"

[node name="Right_TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( 90, 434 )
scale = Vector2( 0.75, 0.75 )
normal = ExtResource( 3 )
passby_press = true
action = "move_right"

[node name="Pause_TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( 16, 8 )
scale = Vector2( 0.75, 0.75 )
normal = ExtResource( 5 )
action = "pause"
